optimize: abstract platform & re impl
Signed-off-by: GR <gr@fastball.dev>